# rustc_macro_behaviour

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
exporter/: Cargo.toml
exporter/src/: lib.rs
macro_generator/: Cargo.toml
macro_generator/src/: lib.rs
user/: Cargo.toml
user/src/: lib.rs
